Compress services images and margins

--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
     <!-- hero section -->
     <section class="services-hero">
         <div class="services-hero-img">
-            <img src="static/img/Mhairi_pics/MT-014.jpg" alt="Woman with coffee">
+            <img src="static/img/Mhairi_pics/laughing-square-comp.jpg" alt="Woman with coffee">
         </div>
         <div class="services-hero-text">
             <div class="services-hero-content">
@@ -140,7 +140,7 @@
     <!-- Parralex testimonial section -->
     <section class="testimonial-container">
         <div class="parallax-container" >
-            <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="testimonial-parallax-window rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="">
+            <img src="static/img/Mhairi_pics/chair-circus-lane-crop.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="">
         </div>
         <div class="testimonial-parallax">
             <div class="love-hearts">
