--- a/services.html
+++ b/services.html
@@ -170,21 +170,21 @@
                 <h3 class="sect-subtitle how-sub">Step one</h3>
                 <h2 class="sect-title how-item-title">Discovery call</h2>
                 <p class="normal-text">
-                    This is one of my favourite parts!  We do an intensive deep dive into all things you.  We look at what’s important to you, what’s working for you in your life, what’s working against you and start to pull out common themes that we can explore in the coaching sessions.
+                    This is one of my favourite parts!  We do an intensive deep dive into all things you.  We look at what’s important to you, what’s working for you in your life, what’s working against you and start to pull out repetitive themes, blocks and goals.
                 </p>
             </div>
             <div class="how-item">
                 <h3 class="sect-subtitle how-sub">Step two</h3>
                 <h2 class="sect-title how-item-title">DISC</h2>
                 <p class="normal-text">
-                    Depending on the program you choose we may do a DISC profiling session.  This is an incredibly powerful tool, pioneered by Dr Marston of Harvard University, to provide a deeper understanding of self.  Following completion of your online questionnaire we pull out your fears, motivators and drivers leaving you with the knowledge to improve your communication, empower your relationships and drive your own performance more effectively.
+                    DISC is an incredibly powerful tool, to provide a deeper understanding of self.  Following completion of your online questionnaire we review your fears, motivators and drivers leaving you with the knowledge to improve your communication, empower your relationships and develop your confidence.
                 </p>
             </div>
             <div class="how-item">
                 <h3 class="sect-subtitle how-sub">Step three</h3>
                 <h2 class="sect-title how-item-title">Bi-weekly coaching</h2>
                 <p class="normal-text">
-                    Then the fun really begins.  Our coaching sessions will be structured in a way that becomes familiar and easy but also centred around you. We work with your conscious and subconscious to unlock your specific barriers.  Through powerful questioning I act as your guide to lead you back to your innate power.  I then help you tap into it to elevate your life. 
+                    Then the fun really begins. Our coaching sessions will be structured in a way that becomes familiar, fun, easy and always centred around you. We work with your conscious and subconscious to fuel your journey. Following my 6 step program we uncover your specific strategy for success and tap into it to radically elevate your life..
                 </p>
             </div>    
         </div>
@@ -414,19 +414,19 @@
                     </div>
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/mhairi_sitting.png" alt="">
+                    <img src="static/img/insta/donuts.png" alt="instagram-post-doubts">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/mhairi_window.jpg" alt="">
+                    <img src="static/img/insta/sunday.png" alt="instagram-post-sunday">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/mhairi_sitting.png" alt="">
+                    <img src="static/img/insta/believe.png" alt="instagram-post-believe">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/floor.jpg" alt="">
+                    <img src="static/img/insta/feel-garden.png" alt="instagram-post-feel">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/laughing.jpg" alt="">
+                    <img src="static/img/insta/mindset.png" alt="instagram-post-mindset">
                 </div>
             </div>
             <!-- END: latest instagram posts -->
