--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
                 <img src="static/img/Mhairi_pics/sitting_yelllow_coat_comp.jpg" alt="mhairi_garden">
             </div>
             <div class="coaching-text">
-                <h2 class="coaching-title">Who</h2>
+                <h2 class="coaching-title">Who?</h2>
                 <p class="normal-text"> 
-                    I know what you’re thinking, is coaching the right thing to help me achieve my dream life?  And if so, is Mhairi the ‘one’?  Mind reading abilities aside these are exactly the questions you should be asking.  
-                    Read more and take my quick fire quiz to find out.  Spoiler alert, the fact that you are here means the answers are YES and YES. 
+                    I know what you’re thinking, is coaching the right thing to help me achieve my dream life?  And if so, is Mhairi the ‘one’?  Mind Reading abilities aside these are exactly the questions you should be asking.  
+                    Read more and take my quick fire quiz to find out.
                 </p>
                 <div class="coach-cta-btn">
                     <a class="btn-white-sm" href="about.html">TELL ME MORE</a>
@@ -132,7 +132,7 @@
                 <img src="static/img/Mhairi_pics/standing_at_window_comp.jpg" alt="mhairi-laptop">
             </div>
             <div class="coaching-text">
-                <h2 class="coaching-title">What</h2>
+                <h2 class="coaching-title">What?</h2>
                 <p class="normal-text p-md-0">  
                     So you’re all in on the idea of coaching but you need to know more about transformation coaching.  Specifically, what on earth it is?!
                     Get the low down on this, learn how my programs work and uncover which package would best suit you.
@@ -147,7 +147,7 @@
                 <img src="static/img/Mhairi_pics/sitting_laptop_blue_comp.jpg" alt="Hands in air">
             </div>
             <div class="coaching-text">
-                <h2 class="coaching-title">Why</h2>
+                <h2 class="coaching-title">Why?</h2>
                 <p class="normal-text p-md-0">  
                     I’m here to make a fundamental difference in the life you led.  You need to know if that can really happen.  Read feedback from some of my wonderful clients and find out how you too can live the life you love.
                     </p>
@@ -163,7 +163,7 @@
     <!-- Parralex quote section -->
     <section class="quote-parallax-container">
         <div class="parallax-container" >
-            <img src="static/img/Mhairi_pics/circus-lane-tower.jpg" class="rellax" data-rellax-zindex="-1" data-rellax-percentage=".7" alt="">
+            <img src="static/img/Mhairi_pics/chair-circus-lane-crop.jpg" class="rellax" data-rellax-zindex="-1" data-rellax-percentage=".7" alt="">
         </div>
         <div class="quote">
             <h3 class="sect-subtitle">
