--- a/index.html
+++ b/index.html
@@ -270,19 +270,19 @@
                     </div>
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/laughing.jpg" alt="">
+                    <img src="static/img/insta/donuts.png" alt="instagram-post-doubts">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/laughing.jpg" alt="">
+                    <img src="static/img/insta/sunday.png" alt="instagram-post-sunday">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/laughing.jpg" alt="">
+                    <img src="static/img/insta/believe.png" alt="instagram-post-believe">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/laughing.jpg" alt="">
+                    <img src="static/img/insta/feel-garden.png" alt="instagram-post-feel">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/Mhairi_pics/laughing.jpg" alt="">
+                    <img src="static/img/insta/mindset.png" alt="instagram-post-mindset">
                 </div>
             </div>
             <!-- END: latest instagram posts -->
