Compresss testimonial iamge

--- a/testimonials.html
+++ b/testimonials.html
@@ -63,19 +63,7 @@
 
     <!-- Parralex hero section -->
     <section class="contact-hero-container">
-        <div class="contact-hero-parallax-window testimonial-hero" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/MT-057_crop.jpg"></div>
-        <!-- <div class="contact-hero-parallax">
-            <h1 class="sect-title">
-                Did you say mail?!
-            </h1>
-            <h2 class="sect-subtitle">
-                I love hearing from you guys.
-            </h2>
-            <p class="normal-text contact-hero-text">
-                Keep scrollin' to contact me about working together, sponsorships, interviews/events, or
-                any questions you have!
-            </p>
-        </div> -->
+        <div class="contact-hero-parallax-window testimonial-hero" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/circus-lane-comp.jpg"></div>
         <div class="testimonial-hero-text">
             <h2>Feel the love</h2>
         </div>
@@ -271,16 +259,17 @@
 
     <!-- Parralex services section -->
     <section class="services-cta">
-        <div class="services-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/MT-032.jpg">
-            <div class="services-cta-content">
-                <h2 class="cta-title">
-                    Get ready to start living
-                </h2>
-                <h3 class="cta-subtitle">
-                    The life of your dreams.
-                </h3>
-                <a class="btn-dark-pink services-cta-btn" href="contact.html">Book in your free discovery call</a>
-            </div>
+        <div class="parallax-container" >
+            <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="">
+        </div>
+        <div class="services-cta-content">
+            <h2 class="cta-title">
+                Get ready to start living
+            </h2>
+            <h3 class="cta-subtitle">
+                The life of your dreams.
+            </h3>
+            <a class="btn-dark-pink services-cta-btn" href="contact.html">Book in your free clarity call</a>
         </div>
     </section>
     <!-- END: parralex services section -->
@@ -379,6 +368,7 @@
     <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>  
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>  
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="static/js/rellax.min.js"></script>
     <script src="static/js/main.js"></script>
 </body>
 </html>
