Adjust testimonial titles sizes

--- a/testimonials.html
+++ b/testimonials.html
@@ -72,7 +72,7 @@
 
     <!-- intro section -->
     <section class="services-intro testimonial-intro you-will-gain-section">
-        <h2 class="about-detail-title sect-title intro-title">
+        <h2 class="services-intro-subtitle rob-font">
             Ready for a breakthrough?
             <br>
             <br>
