Add mhairi content gains

--- a/testimonials.html
+++ b/testimonials.html
@@ -107,7 +107,7 @@
                         SELF FOCUS 
                     </h2>
                     <p class="normal-text">
-                        A life plan and the steps to take to live happy 
+                        Tools to live authentically and move forward with focus 
                     </p>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                         RELEASE 
                     </h2>
                     <p class="normal-text">
-                        The ability to let go of limiting beliefs
+                        The ability to let go of limiting beliefs and negative patterns 
                     </p>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                         RESET 
                     </h2>
                     <p class="normal-text">
-                        Tools to live authentically and move forward with focus 
+                        The power to be present and step out of the anxiety cycle
                     </p>
                 </div>
             </div>
@@ -140,7 +140,7 @@
                         ROAD MAP 
                     </h2>
                     <p class="normal-text">
-                        Tools to live authentically and move forward with focus  
+                        A personal life plan, your roadmap to your dream life  
                     </p>
                 </div>
             </div>
