ADjsut margins on gain items

--- a/testimonials.html
+++ b/testimonials.html
@@ -96,7 +96,19 @@
                         SELF WORTH 
                     </h2>
                     <p class="normal-text">
-                        A healthy relationship with your innermost self 
+                        A healthy dialogue and relationship with your innermost self 
+                    </p>
+                </div>
+            </div>
+            <hr class="half-width-hr pink-hr d-md-none">
+            
+            <div class="gain-item">
+                <div class="gain-item-content">
+                    <h2 class="sect-subtitle">
+                        RELEASE 
+                    </h2>
+                    <p class="normal-text">
+                        The ability to let go of limiting beliefs and negative patterns 
                     </p>
                 </div>
             </div>
@@ -108,17 +120,6 @@
                     </h2>
                     <p class="normal-text">
                         Tools to live authentically and move forward with focus 
-                    </p>
-                </div>
-            </div>
-            <hr class="half-width-hr pink-hr d-md-none">
-            <div class="gain-item">
-                <div class="gain-item-content">
-                    <h2 class="sect-subtitle">
-                        RELEASE 
-                    </h2>
-                    <p class="normal-text">
-                        The ability to let go of limiting beliefs and negative patterns 
                     </p>
                 </div>
             </div>
@@ -146,8 +147,8 @@
             </div>
         </div>
     </section>
-    <hr class="half-width-hr mt-md-1 text-center">
-    <section class="services-intro testimonial-intro">
+    <!-- <hr class="half-width-hr mt-md-1 text-center"> -->
+    <section class="services-intro not-alone">
         <h3 class="services-intro-subtitle rob-font">
             You are not alone!
         </h3>
@@ -169,7 +170,7 @@
         <!-- <h2 class="known-for-title sect-title who-title">
             What my clients are saying?
         </h2> -->
-        <hr class="half-width-hr">
+        <!-- <hr class="half-width-hr"> -->
         <div class="testimonial-item">
             <div class="testimonial-author">
                 <h2 class="logo-font testimonial-author-name">
