--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
@@ -37,7 +43,10 @@
                 <li class="nav-item rob-font"><a href="contact.html">Contact</a></li>
                 <li class="nav-item social-nav">
                     <span class="social-nav-item"><i class="fab fa-facebook"></i></span>
-                    <span class="social-nav-item"><i class="fab fa-instagram"></i></span>
+                    <span class="social-nav-item">
+                        <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank">
+                            <i class="fab fa-instagram"></a></i>
+                    </span>
                     <span class="social-nav-item"><i class="fab fa-pinterest"></i></span>
                     <span class="social-nav-item"><i class="fab fa-linkedin"></i></span>
                 </li>
@@ -64,10 +73,10 @@
     <!-- hero section -->
     <section class="home-hero container-fluid p-0">
         <div class="home-hero-img hero-showing">
-            <img src="static/img/Mhairi_pics/home_hero_comp.jpg" alt="Woman with coffee">
+            <img src="static/img/Mhairi_pics/home_hero_comp.jpg" alt="mhairi-life-coach-in-black-coat">
         </div>
         <div class="home-hero-img">
-            <img src="static/img/Mhairi_pics/home_hero_2_comp.jpg" class="home-hero-2" alt="Woman sitting on table">
+            <img src="static/img/Mhairi_pics/home_hero_2_comp.jpg" class="home-hero-2" alt="mhairi-life-coach-walking-towards">
         </div>
         <div class="home-hero-text">
             <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s">It's time to quit</p>
@@ -90,7 +99,7 @@
             </h2>
         </div>
         <div class="home-about-img">
-            <img src="static/img/Mhairi_pics/mhairi_walking_comp.jpg" alt="Mhairi-garden">
+            <img src="static/img/Mhairi_pics/mhairi_walking_comp.jpg" alt="mhairi-life-coach-walking-away">
         </div>
         <div class="home-about-text">
             <p class="normal-text">
@@ -114,7 +123,7 @@
     <section class="home-coaching">
         <div class="coaching-1-1">
             <div class="coaching-img">
-                <img src="static/img/Mhairi_pics/sitting_yelllow_coat_comp.jpg" alt="mhairi_garden">
+                <img src="static/img/Mhairi_pics/sitting_yelllow_coat_comp.jpg" alt="mhairi-life-coach-in-yellow-coat">
             </div>
             <div class="coaching-text">
                 <h2 class="coaching-title">Who?</h2>
@@ -129,7 +138,7 @@
         </div>
         <div class="coaching-free">
             <div class="coaching-img">
-                <img src="static/img/Mhairi_pics/standing_at_window_comp.jpg" alt="mhairi-laptop">
+                <img src="static/img/Mhairi_pics/standing_at_window_comp.jpg" alt="mhairi-life-coach-at-window">
             </div>
             <div class="coaching-text">
                 <h2 class="coaching-title">What?</h2>
@@ -144,7 +153,7 @@
         </div>
         <div class="coaching-why">
             <div class="coaching-img">
-                <img src="static/img/Mhairi_pics/sitting_laptop_blue_comp.jpg" alt="Hands in air">
+                <img src="static/img/Mhairi_pics/sitting_laptop_blue_comp.jpg" alt="mhairi-life-coach-on-laptop">
             </div>
             <div class="coaching-text">
                 <h2 class="coaching-title">Why?</h2>
@@ -163,7 +172,7 @@
     <!-- Parralex quote section -->
     <section class="quote-parallax-container">
         <div class="parallax-container" >
-            <img src="static/img/Mhairi_pics/chair-circus-lane-crop.jpg" class="rellax" data-rellax-zindex="-1" data-rellax-percentage=".7" alt="">
+            <img src="static/img/Mhairi_pics/chair-circus-lane-crop.jpg" class="rellax" data-rellax-zindex="-1" data-rellax-percentage=".7" alt="mhairi-life-coach-on-chair">
         </div>
         <div class="quote">
             <h3 class="sect-subtitle">
@@ -207,7 +216,7 @@
                 Take this quick quiz to see if Transformation Coaching is right for you right now. 
             </p>
             <div class="quiz-cta">
-                <a id="quizStart" href="" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
+                <a id="quizStart" href="" target="_blank" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
             </div>
         </div>   
 
@@ -229,7 +238,7 @@
     <!-- Parralex services section -->
     <section class="services-cta">
         <div class="parallax-container" >
-            <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="">
+            <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="mhairi-life-coach-in-patio">
         </div>
         <div class="services-cta-content">
             <h2 class="cta-title">
@@ -238,7 +247,7 @@
             <h3 class="cta-subtitle">
                 The life of your dreams.
             </h3>
-            <a class="btn-dark-pink services-cta-btn" href="contact.html">Book in your free clarity call</a>
+            <a class="btn-dark-pink services-cta-btn" href="https://app.acuityscheduling.com/schedule.php?owner=19489834&appointmentType=17193339" target="_blank">Book in your free clarity call</a>
         </div>
     </section>
     <!-- END: parralex services section -->
@@ -255,7 +264,7 @@
                         Or pretty pictures at the very least! 
                     </p>
                     <div class="about-cta-btn cf-button">
-                        <a href="contact.html" class="btn-pink normal-text">Join my tribe!</a>
+                        <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank" class="btn-pink normal-text">Join my tribe!</a>
                     </div>
                 </div>
             </div>
@@ -270,24 +279,23 @@
                     </div>
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/donuts.png" alt="instagram-post-doubts">
+                    <img src="static/img/insta/feel-garden.png" alt="mhairi-life-coach-instagram-feel">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/sunday.png" alt="instagram-post-sunday">
+                    <img src="static/img/insta/sunday.png" alt="mhairi-life-coach-instagram-sunday">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/believe.png" alt="instagram-post-believe">
+                    <img src="static/img/insta/believe.png" alt="mhairi-life-coach-instagram-believe">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/feel-garden.png" alt="instagram-post-feel">
+                    <img src="static/img/insta/succeed.png" alt="mhairi-life-coach-instagram-suceed">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/mindset.png" alt="instagram-post-mindset">
+                    <img src="static/img/insta/mindset.png" alt="mhairi-life-coach-instagram-mindset">
                 </div>
             </div>
             <!-- END: latest instagram posts -->
         </div>
-
         <!-- END: instagram footer -->
 
         <!-- back to top md min-->
@@ -321,19 +329,16 @@
     <!-- footer -->
     <footer class="sect-subtitle">
         <div class="footer-text">
-            Photography by Laurenda Marke Photography
+            Website by Munro Designs
         </div>
     </footer>
-
 
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- parrallex.js -->
-    <!-- <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>     -->
     <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.5.1/dist/simpleParallax.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="static/js/rellax.min.js"></script>
