--- a/about.html
+++ b/about.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
@@ -34,10 +40,13 @@
                 <li class="nav-item rob-font"><a href="about.html">About</a></li>
                 <li class="nav-item rob-font"><a href="services.html">Services</a></li>
                 <li class="nav-item rob-font"><a href="testimonials.html">Testimonials</a></li>
-                <li class="nav-item rob-font"><a href="#">Contact</a></li>
+                <li class="nav-item rob-font"><a href="contact.html">Contact</a></li>
                 <li class="nav-item social-nav">
                     <span class="social-nav-item"><i class="fab fa-facebook"></i></span>
-                    <span class="social-nav-item"><i class="fab fa-instagram"></i></span>
+                    <span class="social-nav-item">
+                        <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank">
+                            <i class="fab fa-instagram"></a></i>
+                    </span>
                     <span class="social-nav-item"><i class="fab fa-pinterest"></i></span>
                     <span class="social-nav-item"><i class="fab fa-linkedin"></i></span>
                 </li>
@@ -64,7 +73,7 @@
     <!-- hero section -->
     <section class="about-hero">
         <div class="about-hero-img">
-            <img src="static/img/Mhairi_pics/about-hero.jpg" alt="Woman with coffee">
+            <img src="static/img/Mhairi_pics/about-hero.jpg" alt="mhairi-life-coach-standing-in-coat">
         </div>
         <div class="about-hero-text">
             <div class="about-hero-content">
@@ -144,7 +153,7 @@
                 <p class="known-for-text normal-text">DISC certified I help unlock motivators, drivers and fears to maximise performance </p>
             </div>
             <div class="known-for-item">
-                <i class="fas fa-graduation-cap"></i>
+                <i class="fab fa-instagram-square"></i>
                 <p class="known-for-text normal-text">Writing short but inspirational Instagram posts to keep you inspired daily</p>
             </div>
             <div class="known-for-item">
@@ -217,7 +226,7 @@
         </div>
         <div class="crazy-about-content">
             <div class="crazy-about-img">
-                <img src="static/img/Mhairi_pics/candle.jpg" alt="fresh-flowers">
+                <img src="static/img/Mhairi_pics/candle.jpg" alt="mhairi-life-coach-candles">
             </div>
             <div class="crazy-about-text">
                 <p class="favourite-text fw-b">Little detail</p>
@@ -228,10 +237,10 @@
                 <p class="favourite-text">This little bundle of cuteness</p>
             </div>
             <div class="crazy-about-img">
-                <img src="static/img/Mhairi_pics/roman-square-comp.jpg" alt="baby">
+                <img src="static/img/Mhairi_pics/roman-square-comp.jpg" alt="mhairi-life-coach-roman">
             </div>
             <div class="crazy-about-img">
-                <img src="static/img/Mhairi_pics/lip-gloss.jpg" alt="woman-heels">
+                <img src="static/img/Mhairi_pics/lip-gloss.jpg" alt="mhairi-life-coach-lip-gloss">
             </div>
             <div class="crazy-about-text">
                 <p class="favourite-text fw-b">Favourite accessory</p>
@@ -242,29 +251,28 @@
                 <p class="favourite-text">Singing</p>
             </div>
             <div class="crazy-about-img">
-                <img src="static/img/Mhairi_pics/mic-comp.jpg" alt="woman-wine">
+                <img src="static/img/Mhairi_pics/mic-comp.jpg" alt="mhairi-life-coach-microphone">
             </div>
             <div class="crazy-about-img">
-                <img src="static/img/Mhairi_pics/coffee.jpg" alt="cake">
+                <img src="static/img/Mhairi_pics/coffee.jpg" alt="mhairi-life-coach-coffee">
             </div>
             <div class="crazy-about-text">
                 <p class="favourite-text fw-b">Treat</p>
                 <p class="favourite-text">Pumpkin spiced latte YUM!</p>
-                <!-- *this post was not sponsored by any coffee house ;-)</p> -->
             </div>
             <div class="crazy-about-text">
                 <p class="favourite-text fw-b">Always find</p>
                 <p class="favourite-text">Laughter in every day </p>
             </div>
             <div class="crazy-about-img">
-                <img src="static/img/Mhairi_pics/laughing-square-comp.jpg" alt="woman-book">
+                <img src="static/img/Mhairi_pics/laughing-square-comp.jpg" alt="mhairi-life-coach-laughing">
             </div>
             <div class="crazy-about-text d-none d-md-block">
                 <p class="favourite-text fw-b">Relax</p>
                 <p class="favourite-text">A hot bath</p>
             </div>
             <div class="crazy-about-img">
-                <img src="static/img/Mhairi_pics/lede-the-witcher-comp.jpg" alt="">
+                <img src="static/img/Mhairi_pics/lede-the-witcher-comp.jpg" alt="mhairi-life-coach-the-witcher">
             </div>
             <div class="crazy-about-text">
                 <p class="favourite-text fw-b">Recent Netlfix</p>
@@ -277,7 +285,7 @@
    <!-- Parralex services section -->
     <section class="services-cta">
         <div class="parallax-container" >
-            <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="">
+            <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="mhairi-life-coach-in-patio">
         </div>
         <div class="services-cta-content">
             <h2 class="cta-title">
@@ -286,7 +294,7 @@
             <h3 class="cta-subtitle">
                 The life of your dreams.
             </h3>
-            <a class="btn-dark-pink services-cta-btn" href="contact.html">Book in your free clarity call</a>
+            <a class="btn-dark-pink services-cta-btn" href="https://app.acuityscheduling.com/schedule.php?owner=19489834&appointmentType=17193339" target="_blank" >Book in your free clarity call</a>
         </div>
     </section>
     <!-- END: parralex services section -->
@@ -303,7 +311,7 @@
                         Or pretty pictures at the very least! 
                     </p>
                     <div class="about-cta-btn cf-button">
-                        <a href="contact.html" class="btn-pink normal-text">Join my tribe!</a>
+                        <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank" class="btn-pink normal-text">Join my tribe!</a>
                     </div>
                 </div>
             </div>
@@ -318,24 +326,23 @@
                     </div>
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/donuts.png" alt="instagram-post-doubts">
+                    <img src="static/img/insta/feel-garden.png" alt="mhairi-life-coach-instagram-feel">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/sunday.png" alt="instagram-post-sunday">
+                    <img src="static/img/insta/sunday.png" alt="mhairi-life-coach-instagram-sunday">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/believe.png" alt="instagram-post-believe">
+                    <img src="static/img/insta/believe.png" alt="mhairi-life-coach-instagram-believe">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/feel-garden.png" alt="instagram-post-feel">
+                    <img src="static/img/insta/succeed.png" alt="mhairi-life-coach-instagram-suceed">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/mindset.png" alt="instagram-post-mindset">
+                    <img src="static/img/insta/mindset.png" alt="mhairi-life-coach-instagram-mindset">
                 </div>
             </div>
             <!-- END: latest instagram posts -->
         </div>
-
         <!-- END: instagram footer -->
 
         <!-- back to top md min-->
@@ -369,7 +376,7 @@
     <!-- footer -->
     <footer class="sect-subtitle">
         <div class="footer-text">
-            Photography by Laurenda Marke Photography
+            Website by Munro Designs
         </div>
     </footer>
 
