--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
@@ -37,7 +43,10 @@
                 <li class="nav-item rob-font"><a href="#">Contact</a></li>
                 <li class="nav-item social-nav">
                     <span class="social-nav-item"><i class="fab fa-facebook"></i></span>
-                    <span class="social-nav-item"><i class="fab fa-instagram"></i></span>
+                    <span class="social-nav-item">
+                        <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank">
+                            <i class="fab fa-instagram"></a></i>
+                    </span>
                     <span class="social-nav-item"><i class="fab fa-pinterest"></i></span>
                     <span class="social-nav-item"><i class="fab fa-linkedin"></i></span>
                 </li>
@@ -63,7 +72,7 @@
 
     <!-- Parralex hero section -->
     <section class="contact-hero-container">
-        <div class="contact-hero-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/MT-031.jpg"></div>
+        <div class="contact-hero-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/typing-comp.jpg"></div>
         <div class="contact-hero-parallax">
             <h1 class="sect-title">
                 Did you say mail?!
@@ -118,12 +127,12 @@
             </div>
         </div>
         <div class="contact-form-img">
-            <img src="static/img/Mhairi_pics/MT-054.jpg" alt="woman standing straight">
+            <img src="static/img/Mhairi_pics/coat-pull-comp.jpg" alt="mhairi-life-coach-in-coat">
         </div>
     </section>
     <!-- END: contact form section -->
 
-    <!-- who is this for -->
+    <!-- FAQ -->
     <section class="faq-section">
         <h2 class="faq-title logo-3">
             Frequently asked questions
@@ -182,7 +191,24 @@
             </div>  
         </div>
     </section>
-    <!-- END: who is this for -->
+    <!-- END: FAQ -->
+
+    <!-- Parralex services section -->
+    <section class="services-cta">
+        <div class="parallax-container" >
+            <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="mhairi-life-coach-in-patio">
+        </div>
+        <div class="services-cta-content">
+            <h2 class="cta-title">
+                Get ready to start living
+            </h2>
+            <h3 class="cta-subtitle">
+                The life of your dreams.
+            </h3>
+            <a class="btn-dark-pink services-cta-btn" href="https://app.acuityscheduling.com/schedule.php?owner=19489834&appointmentType=17193339" target="_blank" >Book in your free clarity call</a>
+        </div>
+    </section>
+    <!-- END: parralex services section -->
     
     <!-- instagram footer -->
     <section class="contact-footer">
@@ -196,7 +222,7 @@
                         Or pretty pictures at the very least! 
                     </p>
                     <div class="about-cta-btn cf-button">
-                        <a href="contact.html" class="btn-pink normal-text">Join my tribe!</a>
+                        <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank" class="btn-pink normal-text">Join my tribe!</a>
                     </div>
                 </div>
             </div>
@@ -211,24 +237,23 @@
                     </div>
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/donuts.png" alt="instagram-post-doubts">
+                    <img src="static/img/insta/feel-garden.png" alt="mhairi-life-coach-instagram-feel">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/sunday.png" alt="instagram-post-sunday">
+                    <img src="static/img/insta/sunday.png" alt="mhairi-life-coach-instagram-sunday">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/believe.png" alt="instagram-post-believe">
+                    <img src="static/img/insta/believe.png" alt="mhairi-life-coach-instagram-believe">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/feel-garden.png" alt="instagram-post-feel">
+                    <img src="static/img/insta/succeed.png" alt="mhairi-life-coach-instagram-suceed">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/mindset.png" alt="instagram-post-mindset">
+                    <img src="static/img/insta/mindset.png" alt="mhairi-life-coach-instagram-mindset">
                 </div>
             </div>
             <!-- END: latest instagram posts -->
         </div>
-
         <!-- END: instagram footer -->
 
         <!-- back to top md min-->
@@ -263,7 +288,7 @@
     <!-- footer -->
     <footer class="sect-subtitle">
         <div class="footer-text">
-            Photography by Laurenda Marke Photography
+            Website by Munro Designs
         </div>
     </footer>
 
