--- a/services.html
+++ b/services.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
@@ -37,7 +43,10 @@
                 <li class="nav-item rob-font"><a href="contact.html">Contact</a></li>
                 <li class="nav-item social-nav">
                     <span class="social-nav-item"><i class="fab fa-facebook"></i></span>
-                    <span class="social-nav-item"><i class="fab fa-instagram"></i></span>
+                    <span class="social-nav-item">
+                        <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank">
+                            <i class="fab fa-instagram"></a></i>
+                    </span>
                     <span class="social-nav-item"><i class="fab fa-pinterest"></i></span>
                     <span class="social-nav-item"><i class="fab fa-linkedin"></i></span>
                 </li>
@@ -64,7 +73,7 @@
     <!-- hero section -->
     <section class="services-hero">
         <div class="services-hero-img">
-            <img src="static/img/Mhairi_pics/laughing-square-comp.jpg" alt="Woman with coffee">
+            <img src="static/img/Mhairi_pics/laughing-square-comp.jpg" alt="mhairi-life-coach-laughing">
         </div>
         <div class="services-hero-text">
             <div class="services-hero-content">
@@ -373,7 +382,7 @@
     <!-- Parralex services section -->
     <section class="services-cta">
         <div class="parallax-container" >
-            <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="">
+            <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="mhairi-life-coach-in-patio">
         </div>
         <div class="services-cta-content">
             <h2 class="cta-title">
@@ -382,7 +391,7 @@
             <h3 class="cta-subtitle">
                 The life of your dreams.
             </h3>
-            <a class="btn-dark-pink services-cta-btn" href="contact.html">Book in your free clarity call</a>
+            <a class="btn-dark-pink services-cta-btn" href="https://app.acuityscheduling.com/schedule.php?owner=19489834&appointmentType=17193339" target="_blank">Book in your free clarity call</a>
         </div>
     </section>
     <!-- END: parralex services section -->
@@ -399,7 +408,7 @@
                         Or pretty pictures at the very least! 
                     </p>
                     <div class="about-cta-btn cf-button">
-                        <a href="contact.html" class="btn-pink normal-text">Join my tribe!</a>
+                        <a href="https://www.instagram.com/mhairi_lifecoach/?hl=en" target="_blank" class="btn-pink normal-text">Join my tribe!</a>
                     </div>
                 </div>
             </div>
@@ -414,24 +423,23 @@
                     </div>
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/donuts.png" alt="instagram-post-doubts">
+                    <img src="static/img/insta/feel-garden.png" alt="mhairi-life-coach-instagram-feel">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/sunday.png" alt="instagram-post-sunday">
+                    <img src="static/img/insta/sunday.png" alt="mhairi-life-coach-instagram-sunday">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/believe.png" alt="instagram-post-believe">
+                    <img src="static/img/insta/believe.png" alt="mhairi-life-coach-instagram-believe">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/feel-garden.png" alt="instagram-post-feel">
+                    <img src="static/img/insta/succeed.png" alt="mhairi-life-coach-instagram-suceed">
                 </div>
                 <div class="latest-post-item">
-                    <img src="static/img/insta/mindset.png" alt="instagram-post-mindset">
+                    <img src="static/img/insta/mindset.png" alt="mhairi-life-coach-instagram-mindset">
                 </div>
             </div>
             <!-- END: latest instagram posts -->
         </div>
-
         <!-- END: instagram footer -->
 
         <!-- back to top md min-->
@@ -466,7 +474,7 @@
     <!-- footer -->
     <footer class="sect-subtitle">
         <div class="footer-text">
-            Photography by Laurenda Marke Photography
+            Website by Munro Designs
         </div>
     </footer>
 
