Remove unused links

--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/> -->
     <link rel="stylesheet" href="static/css/main.css">
 </head>
 <body>
@@ -88,11 +88,11 @@
     </section>
     <!-- END: hero section -->
 
-    <!-- hero section -->
+    <!-- about detail section -->
     <section class="about-detail">
         <h1 class="about-detail-title sect-title">I WENT FROM OUTWARDLY HAVING IT ALL BUT INWARDLY ANXIOUS & FULL OF SELF DOUBT TO…<span class="fw-b">DIVORCED</span></h1>
         <h3 class="about-detail-subtitle sect-subtitle">IT CHANGED THE GAME AND THAT IS WHERE MY JOURNEY TO SUCCESS TRULY BEGAN</h3>
-        <hr class="pink-hr" data-aos="fade-slide-left">
+        <hr class="pink-hr">
         <div class="about-detail-content">
             <div class="first-col">
                 <p class="normal-text">
@@ -134,7 +134,7 @@
             <p class="sect-subtitle pink-text">I emerged as my best self, now I’m going to help you do the same.</p>
         </div>
     </section>
-    <!-- END: hero section -->
+    <!-- END: about detail section -->
 
     <!-- what I'm known for section -->
     <section class="known-for">
@@ -388,9 +388,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- parrallex.js -->
-    <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>  
+    <!-- <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>  
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>  
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
     <script src="static/js/rellax.min.js"></script>
     <script src="static/js/main.js"></script>
 </body>
