--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/favicon_io/site.webmanifest">
 
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/> -->
-    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
     <link rel="stylesheet" href="static/css/main.css">
 </head>
 <body>
@@ -79,13 +77,9 @@
             <img src="static/img/Mhairi_pics/home_hero_2_comp.jpg" class="home-hero-2" alt="mhairi-life-coach-walking-towards">
         </div>
         <div class="home-hero-text">
-            <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s">It's time to quit</p>
-            <p class="animate__animated animate__fadeInRight animate__delay-1s">the tiring hustle</p> -->
             <p class="animate__animated animate__fadeInLeft animate__delay-1s">Revolutionise</p>
             <p class="animate__animated animate__fadeInLeft animate__delay-1s">your life from the</p>
-            <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s">From the</p> -->
             <p class="logo-sub animate__animated animate__fadeInRight animate__delay-1s">Inside out</p>
-            <!-- <p class="animate__animated animate__fadeInLeft animate__delay-1s"></p> -->
         </div>
     </section>
     <!-- END: hero section -->
@@ -318,7 +312,6 @@
     <div class="back-to-top-footer d-md-none">
         <a href="#header">
             <div class="to-top">
-                <!-- <i class="material-icons icon-up-arrow">arrow_upward</i> -->
                 <svg class="icon-up-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 94 34"><path d="M9 20l1 1h68v4l1 1h1l5-6v-1l-5-5h-1l-1 1v4H10l-1 1z"></path></svg>
                 <h3 class="to-top-text">Back to top</h3>
             </div>
@@ -338,10 +331,9 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <!-- parrallex.js -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.5.1/dist/simpleParallax.min.js"></script> -->
-    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
+    <!-- rellax.js -->
     <script src="static/js/rellax.min.js"></script>
+    <!--  script -->
     <script src="static/js/main.js"></script>
 </body>
 </html>
