--- a/testimonials.html
+++ b/testimonials.html
@@ -11,11 +11,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/favicon_io/site.webmanifest">
 
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/> -->
     <link rel="stylesheet" href="static/css/main.css">
 </head>
 <body>
@@ -156,7 +154,6 @@
             </div>
         </div>
     </section>
-    <!-- <hr class="half-width-hr mt-md-1 text-center"> -->
     <section class="services-intro not-alone">
         <h3 class="services-intro-subtitle rob-font">
             You are not alone!
@@ -176,10 +173,6 @@
     
     <!-- testimonials section -->
     <section class="testimonials-section">
-        <!-- <h2 class="known-for-title sect-title who-title">
-            What my clients are saying?
-        </h2> -->
-        <!-- <hr class="half-width-hr"> -->
         <div class="testimonial-item">
             <div class="testimonial-author">
                 <h2 class="logo-font testimonial-author-name">
@@ -407,7 +400,6 @@
         <div class="back-to-top-md d-none d-md-block">
             <a href="#header">
                 <div class="to-top">
-                    <!-- <i class="material-icons icon-up-arrow">arrow_upward</i> -->
                     <svg class="icon-up-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 94 34"><path d="M9 20l1 1h68v4l1 1h1l5-6v-1l-5-5h-1l-1 1v4H10l-1 1z"></path></svg>
                     <h3 class="to-top-text">Back to top</h3>
                 </div>
@@ -423,14 +415,12 @@
     <div class="back-to-top-footer d-md-none">
         <a href="#header">
             <div class="to-top">
-                <!-- <i class="material-icons icon-up-arrow">arrow_upward</i> -->
                 <svg class="icon-up-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 94 34"><path d="M9 20l1 1h68v4l1 1h1l5-6v-1l-5-5h-1l-1 1v4H10l-1 1z"></path></svg>
                 <h3 class="to-top-text">Back to top</h3>
             </div>
         </a>
     </div>
     <!-- END: back to top -->
-    
 
     <!-- footer -->
     <footer class="sect-subtitle">
@@ -439,18 +429,15 @@
         </div>
     </footer>
 
-
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- parrallex.js -->
     <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
-    <!-- <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>   -->
-    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> --> -->
     <script src="static/js/rellax.min.js"></script>
+    <!-- script -->
     <script src="static/js/main.js"></script>
 </body>
 </html>
