Change about intro text

--- a/about.html
+++ b/about.html
@@ -88,8 +88,8 @@
 
     <!-- about detail section -->
     <section class="about-detail">
-        <h1 class="about-detail-title sect-title">I WENT FROM OUTWARDLY HAVING IT ALL BUT INWARDLY ANXIOUS & FULL OF SELF DOUBT TO…<span class="fw-b">DIVORCED</span></h1>
-        <h3 class="about-detail-subtitle sect-subtitle">IT CHANGED THE GAME AND THAT IS WHERE MY JOURNEY TO SUCCESS TRULY BEGAN</h3>
+        <h1 class="about-detail-title sect-title">I WENT FROM SEEMINGLY HAVING IT ALL BUT INWARDLY RESTLESS & FULL OF SELF DOUBT TO…<span class="fw-b">DIVORCED</span></h1>
+        <h3 class="about-detail-subtitle sect-subtitle">IT CHANGED THE GAME AND THAT IS WHERE MY JOURNEY TO HAPPINESS TRULY BEGAN</h3>
         <hr class="pink-hr">
         <div class="about-detail-content">
             <div class="first-col">
