--- a/testimonials.html
+++ b/testimonials.html
@@ -61,8 +61,10 @@
     <!-- logo on mobile -->
     <div class="logo-xs-container d-md-none">
         <div class="header-xs-logo">
-            <h1 class="logo-1 mb-1">Mhairi Todd</h1>
-            <h2 class="logo-subtitle">Life Transformation Coach</h2>
+            <a class="header-link" href="index.html">
+                <h1 class="logo-1 mb-1">Mhairi Todd</h1>
+                <h2 class="logo-subtitle mb-0">Life Transformation Coach</h2>
+            </a>
         </div>
     </div>
     
