Set all parallax to fixed bg

--- a/services.html
+++ b/services.html
@@ -148,9 +148,7 @@
 
     <!-- Parralex testimonial section -->
     <section class="testimonial-container">
-        <div class="parallax-container" >
-            <img src="static/img/Mhairi_pics/chair-circus-lane-crop.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="">
-        </div>
+        <div class="parallax-container" ></div>
         <div class="testimonial-parallax">
             <div class="love-hearts">
                 <i class="fas fa-heart"></i>
@@ -381,9 +379,7 @@
 
     <!-- Parralex services section -->
     <section class="services-cta">
-        <div class="parallax-container" >
-            <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="mhairi-life-coach-in-patio">
-        </div>
+        <div class="parallax-container"></div>
         <div class="services-cta-content">
             <h2 class="cta-title">
                 Get ready to start living
