--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 
     <!-- Parralex hero section -->
     <section class="contact-hero-container">
-        <div class="contact-hero-parallax-window" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/typing-comp.jpg"></div>
+        <div class="parallax-container contact-hero-parallax-window"></div>
         <div class="contact-hero-parallax">
             <h1 class="sect-title">
                 Did you say mail?!
@@ -195,9 +195,7 @@
 
     <!-- Parralex services section -->
     <section class="services-cta">
-        <div class="parallax-container" >
-            <img src="static/img/Mhairi_pics/patio_sitting_comp.jpg" class="rellax" data-rellax-percentage=".7" data-rellax-zindex="-1" alt="mhairi-life-coach-in-patio">
-        </div>
+        <div class="parallax-container"></div>
         <div class="services-cta-content">
             <h2 class="cta-title">
                 Get ready to start living
@@ -205,7 +203,7 @@
             <h3 class="cta-subtitle">
                 The life of your dreams.
             </h3>
-            <a class="btn-dark-pink services-cta-btn" href="https://app.acuityscheduling.com/schedule.php?owner=19489834&appointmentType=17193339" target="_blank" >Book in your free clarity call</a>
+            <a class="btn-dark-pink services-cta-btn" href="https://app.acuityscheduling.com/schedule.php?owner=19489834&appointmentType=17193339" target="_blank">Book in your free clarity call</a>
         </div>
     </section>
     <!-- END: parralex services section -->
