Adjust home coaching image positions

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             </a>
         </div>
         <div class="toggle-header">
-            <h1 class="header-name d-md-none">Mhairi Todd</h1>
+            <a class="header-link" href="index.html">
+                <h1 class="header-name d-md-none">Mhairi Todd</h1>
+            </a>
             <div class="nav-toggle">
                 <h5 class="nav-toggle-text">MENU</h5>
                 <div class="nav-toggle-bar"></div>
@@ -114,19 +116,6 @@
         </div>
     </section>
     <!-- END: Home about section -->
-
-    <!-- Parralex quote section -->
-    <section class="quote-parallax-container">
-        <div class="quote">
-            <h3 class="sect-subtitle">
-                Words I live by
-            </h3>
-            <p class="quote-text">
-                “THE KEY TO SUCCESS IS TO START BEFORE YOU ARE READY”
-            </p>
-        </div>
-    </section>
-    <!-- END: parralex quote section -->
 
     <!-- quiz section -->
     <section class="quiz-section">
@@ -227,6 +216,19 @@
         </div>
     </section>
     <!-- END: home-coaching section -->
+
+    <!-- Parralex quote section -->
+    <section class="quote-parallax-container">
+        <div class="quote">
+            <h3 class="sect-subtitle">
+                Words I live by
+            </h3>
+            <p class="quote-text">
+                “THE KEY TO SUCCESS IS TO START BEFORE YOU ARE READY”
+            </p>
+        </div>
+    </section>
+    <!-- END: parralex quote section -->
 
     <!-- Parralex services section -->
     <section class="services-cta">
