--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,9 @@
             </a>
         </div>
         <div class="toggle-header">
-            <h1 class="header-name d-md-none">Mhairi Todd</h1>
+            <a class="header-link" href="index.html">
+                <h1 class="header-name d-md-none">Mhairi Todd</h1>
+            </a>
             <div class="nav-toggle">
                 <h5 class="nav-toggle-text">MENU</h5>
                 <div class="nav-toggle-bar"></div>
