Add parallax to quote

--- a/testimonials.html
+++ b/testimonials.html
@@ -73,8 +73,8 @@
     <!-- END: logo on mobile -->
 
     <!-- Parralex hero section -->
-    <section class="contact-hero-container">
-        <div class="contact-hero-parallax-window testimonial-hero" data-parallax="scroll" data-image-src="static/img/Mhairi_pics/circus-lane-comp.jpg"></div>
+    <section class="testimonial-hero-container">
+        <div class="parallax-container contact-hero-parallax-window"></div>
         <div class="testimonial-hero-text">
             <h2>Feel the love</h2>
         </div>
