Add home gain section with fade

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="manifest" href="/favicon_io/site.webmanifest">
 
     <!-- Stylesheets -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
     <link rel="stylesheet" href="static/css/main.css">
@@ -166,6 +167,66 @@
         </div>
     </section>
     <!-- END: home-coaching section -->
+
+    <!-- you will gain section -->
+    <section class="home-you-will-gain">
+        <div class="home-gain-heading">
+            <h2 class="logo-3">
+                Revolve
+            </h2>
+            <h3 class="sect-title rob-font">
+                This time is for you. Welcome home
+            </h3>
+        </div>
+        <div class="home-gain-content">
+            <div class="home-gain-item" data-aos="fade-right" data-aos-offset="100" data-aos-duration="1000" data-aos-delay="1500">
+                <h3 class="services-intro-subtitle rob-font">
+                    Restore
+                </h3>
+                <p class="normal-text">
+                    Self Awareness
+                </p>
+                <p class="normal-text">
+                    Confidence 
+                </p>
+                <p class="normal-text">
+                    Authenticity 
+                </p>
+            </div>
+            <hr class="half-width-hr pink-hr d-md-none">
+            <div class="home-gain-item" data-aos="fade-right" data-aos-offset="100" data-aos-duration="1000" data-aos-delay="1000">
+                <h3 class="services-intro-subtitle rob-font">
+                    Release
+                </h3>
+                <p class="normal-text">
+                    Inner Critic
+                </p>
+                <p class="normal-text">
+                    Limiting Beliefs
+                </p>
+                <p class="normal-text">
+                    Negative Patterns 
+                </p>
+            </div>
+            <hr class="half-width-hr pink-hr d-md-none">
+            <div class="home-gain-item" data-aos="fade-right" data-aos-offset="100" data-aos-duration="1000">
+                <h3 class="services-intro-subtitle rob-font">
+                    Reveal
+                </h3>
+                <p class="normal-text">
+                    Future Focus
+                </p>
+                <p class="normal-text">
+                    Personalised Life Plan
+                </p>
+                <p class="normal-text">
+                    YOUR JOY
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- END: you will gain section -->
 
     <!-- Parralex quote section -->
     <section class="quote-parallax-container">
@@ -327,6 +388,8 @@
 
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
