Add gain sect to home
Change opacity of testimonial hero

--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
     <section class="home-you-will-gain">
         <div class="home-gain-heading">
             <h2 class="logo-3">
-                Revolve
+                Revolve Coaching
             </h2>
             <h3 class="sect-title rob-font">
-                This time is for you. Welcome home
+                This time is for you
             </h3>
         </div>
         <div class="home-gain-content">
-            <div class="home-gain-item" data-aos="fade-right" data-aos-offset="100" data-aos-duration="1000" data-aos-delay="1500">
+            <div class="home-gain-item" data-aos="fade-right" data-aos-offset="100" data-aos-duration="1000">
                 <h3 class="services-intro-subtitle rob-font">
                     Restore
                 </h3>
@@ -209,7 +209,7 @@
                 </p>
             </div>
             <hr class="half-width-hr pink-hr d-md-none">
-            <div class="home-gain-item" data-aos="fade-right" data-aos-offset="100" data-aos-duration="1000">
+            <div class="home-gain-item" data-aos="fade-right" data-aos-offset="100" data-aos-duration="1000" data-aos-delay="1500">
                 <h3 class="services-intro-subtitle rob-font">
                     Reveal
                 </h3>
@@ -220,7 +220,7 @@
                     Personalised Life Plan
                 </p>
                 <p class="normal-text">
-                    YOUR JOY
+                    Your Joy
                 </p>
             </div>
         </div>
@@ -228,19 +228,21 @@
 
     <!-- END: you will gain section -->
 
-    <!-- Parralex quote section -->
-    <section class="quote-parallax-container">
-        <div class="quote">
-            <h3 class="sect-subtitle">
-                Words I live by
+    <!-- Parralex services section -->
+    <section class="services-cta">
+        <div class="parallax-container"></div>
+        <div class="services-cta-content">
+            <h2 class="cta-title">
+                Get ready to start living
+            </h2>
+            <h3 class="cta-subtitle">
+                The life of your dreams.
             </h3>
-            <p class="quote-text">
-                “THE KEY TO SUCCESS IS TO START BEFORE YOU ARE READY”
-            </p>
+            <a class="btn-dark-pink services-cta-btn" href="https://app.acuityscheduling.com/schedule.php?owner=19489834&appointmentType=17193339" target="_blank">Book in your free clarity call</a>
         </div>
     </section>
-    <!-- END: parralex quote section -->
-
+    <!-- END: parralex services section -->
+    
     <!-- quiz section -->
     <section class="quiz-section">
         <!-- First quiz CTA section -->
@@ -291,20 +293,18 @@
     </section>
     <!-- END: quiz section -->
 
-    <!-- Parralex services section -->
-    <section class="services-cta">
-        <div class="parallax-container"></div>
-        <div class="services-cta-content">
-            <h2 class="cta-title">
-                Get ready to start living
-            </h2>
-            <h3 class="cta-subtitle">
-                The life of your dreams.
+    <!-- Parralex quote section -->
+    <section class="quote-parallax-container">
+        <div class="quote">
+            <h3 class="sect-subtitle">
+                Words I live by
             </h3>
-            <a class="btn-dark-pink services-cta-btn" href="https://app.acuityscheduling.com/schedule.php?owner=19489834&appointmentType=17193339" target="_blank">Book in your free clarity call</a>
+            <p class="quote-text">
+                “THE KEY TO SUCCESS IS TO START BEFORE YOU ARE READY”
+            </p>
         </div>
     </section>
-    <!-- END: parralex services section -->
+    <!-- END: parralex quote section -->
 
     <!-- instagram footer -->
     <section class="contact-footer">
