--- a/contact.html
+++ b/contact.html
@@ -195,6 +195,56 @@
     </section>
     <!-- END: FAQ -->
 
+    <!-- quiz section -->
+    <section class="quiz-section">
+        <!-- First quiz CTA section -->
+        <div id="quizCta" class="">
+            <h2 class="quiz-title sect-title">
+                The coaching  
+            </h2>
+            <h3 class="quiz-font logo-font">
+                quiz
+            </h3>
+            <div class="quiz-cta-content">
+                <h4 id="quizResult" class="quiz-content-title sect-title">
+                    Find out if coaching is for you in less than 60 seconds
+                </h4>
+                <div class="quiz-cta">
+                    <a id="quizIntroBtn" href="" class="quiz-cta-btn btn-black normal-text">Tell me more</a>
+                </div>
+            </div>  
+        </div>
+
+        <!-- Second quiz intro section -->
+        <div id="quizIntro" class="quiz-intro quiz-cta-content">
+            <h2 class="quiz-title sect-title">
+                The coaching <span class="logo-font">quiz</span>
+            </h2>
+            <p id="quizIntroText" class="quiz-content-main normal-text">
+                Believe it or not, Transformation coaching is not for everyone. There are some 
+                who would really benefit from a coach, but they just aren't ready to make the changes to better their lives. 
+                Take this quick quiz to see if Transformation Coaching is right for you right now. 
+            </p>
+            <div class="quiz-cta">
+                <a id="quizStart" href="" target="_blank" class="quiz-cta-btn btn-black normal-text">Take the quiz</a>
+            </div>
+        </div>   
+
+        <!-- Third quiz Quiz section -->
+        <div id="quiz" class="quiz-item">
+            <h2 class="quiz-title sect-title">
+                The coaching <span class="logo-font">quiz</span>
+            </h2>
+            <div class="question-number normal-text"><i>Question <span id="questionNumber"></span></i></div>
+            <div id="question" class="normal-text quiz-label"></div> 
+            <div class="options">
+                <button id="choiceTrue" class="option-btn btn-white-sm">True</button>
+                <button id="choiceFalse" class="option-btn btn-white-sm">False</button>
+            </div>
+        </div>
+    </section>
+    <!-- END: quiz section -->
+
     <!-- Parralex services section -->
     <section class="services-cta">
         <div class="parallax-container"></div>
@@ -292,6 +342,8 @@
 
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
