Add contact hero text

--- a/contact.html
+++ b/contact.html
@@ -77,10 +77,10 @@
         <div class="parallax-container contact-hero-parallax-window"></div>
         <div class="contact-hero-parallax">
             <h1 class="sect-title">
-                Did you say mail?!
+                LET'S TALK!
             </h1>
             <h2 class="sect-subtitle">
-                I love hearing from you guys.
+                I'M SCOTTISH, IT'S OUR FAVOURITE THING TO DO
             </h2>
             <p class="normal-text contact-hero-text">
                 Keep scrollin' to contact me about working together, sponsorships, interviews/events, or
